# binapi

./: CMakeLists.txt
examples/asynchronous/: CMakeLists.txt
examples/asynchronous-user_data/: CMakeLists.txt
examples/synchronous/: CMakeLists.txt
examples/synchronous-user_data/: CMakeLists.txt
examples/websockets/: CMakeLists.txt  main.cpp
include/binapi/: flatjson.hpp  types.hpp  websocket.hpp
src/: types.cpp  websocket.cpp
